@@ -1,3 +1,9 @@
+2005-01-18  Miklos Szeredi <miklos@szeredi.hu>
+
+	* KERNEL ABI: remove GETDIR operation, and add OPENDIR, READDIR
+	and RELEASEDIR.  This ends the ugly hack of passing a file
+	descriptor to the kernel, and actually makes the code simpler.
+
 2005-01-17  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Released 2.2-pre4
